--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
       <li><a href="type-object.html">Type Object</a></li>
     </ul>
   </li>
-  <li>Decoupling Patterns
+  <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
     <ul>
       <li><a href="component.html">Component</a></li>
       <li><a href="event-queue.html">Event Queue</a></li>
