--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -703,7 +703,7 @@ this option.</p>
 <div class="codehilite"><pre><span class="n">Frame</span> <span class="mi">1</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">A</span>
 <span class="n">Frame</span> <span class="mi">2</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">B</span>
 <span class="n">Frame</span> <span class="mi">3</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">A</span>
-<span class="o">&amp;</span><span class="n">hellip</span><span class="p">;</span>
+<span class="p">...</span>
 </pre></div>
 
 
