--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -700,10 +700,10 @@ this option.</p>
 <p><em>Existing data on the buffer will be from two frames ago, not
     the last frame.</em> Successive frames are drawn on alternating
     buffers, with no data copied between them, like so:</p>
-<div class="codehilite"><pre><span class="n">Frame</span> <span class="mi">1</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">A</span>
-<span class="n">Frame</span> <span class="mi">2</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">B</span>
-<span class="n">Frame</span> <span class="mi">3</span> <span class="n">drawn</span> <span class="n">on</span> <span class="n">buffer</span> <span class="n">A</span>
-<span class="p">...</span>
+<div class="codehilite"><pre>Frame 1 drawn on buffer A
+Frame 2 drawn on buffer B
+Frame 3 drawn on buffer A
+...
 </pre></div>
 
 
