--- a/html/observer.html
+++ b/html/observer.html
@@ -203,6 +203,7 @@ through it quickly.</p>
 <p>It&#x2019;s also important that the subject has a <em>list</em> of observers instead of a single one. It makes sure that observers aren&#x2019;t implicitly coupled to <em>each other</em>. For example, say the audio engine also observes the fall event so that it can play an appropriate sound. If the subject only supported one observer, when the audio engine registered itself, that would <em>un</em>register the achievements system.</p>
 <p>That means those two systems would be interfering with each other&thinsp;&mdash;&thinsp;and in a particularly nasty way, since one would effectively disable the other. Supporting a list of observers ensures that each observer is treated independently from the others. As far as they know, each is the only thing in the world with eyes on the subject.</p>
 <p>The other job of the subject is sending notifications:</p>
+<p><span name="concurrent"></span></p>
 <div class="codehilite"><pre><span class="kt">void</span> <span class="n">Subject</span><span class="o">::</span><span class="n">notify</span><span class="p">(</span><span class="k">const</span> <span class="n">Entity</span><span class="o">&amp;</span> <span class="n">entity</span><span class="p">,</span> <span class="n">Event</span> <span class="n">event</span><span class="p">)</span>
 <span class="p">{</span>
   <span class="k">for</span> <span class="p">(</span><span class="kt">int</span> <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span> <span class="n">i</span> <span class="o">&lt;</span> <span class="n">numObservers_</span><span class="p">;</span> <span class="n">i</span><span class="o">++</span><span class="p">)</span>
@@ -212,6 +213,11 @@ through it quickly.</p>
 <span class="p">}</span>
 </pre></div>
 
+
+<aside name="concurrent">
+
+<p>Note that this code assumes observers don&#x2019;t modify the list in their <code>onNotify</code> methods. A more robust implementation would either prevent or gracefully handle concurrent modification like that.</p>
+</aside>
 
 <h3><a href="#observable-physics" name="observable-physics">Observable physics</a></h3>
 <p>Now we just need to hook all of this into the physics engine so that it can send notifications and the achievement system can wire itself up to receive them. We&#x2019;ll stay close to the original <em>Design Patterns</em> recipe and <span name="event">inherit</span> <code>Subject</code>:</p>
