--- a/html/update-method.html
+++ b/html/update-method.html
@@ -126,7 +126,7 @@
 </pre></div>
 
 
-<p>I did the before/after here to show you how the code gets more complex. Patrolling left and right used to be two simple <code>for</code> loops. It kept track of which direction the skeleton was moving implicitly by which loop was executing. Now that we have to yield to the outer game loop each frame and then resume where we left off, we have to track that explicitly using that <code>patrollingLeft</code> variable.</p>
+<p>I did the before/after here to show you how the code gets more complex. Patrolling left and right used to be two simple <code>for</code> loops. It kept track of which direction the skeleton was moving implicitly by which loop was executing. Now that we have to yield to the outer game loop each frame and then resume where we left off, we have to track the direction explicitly using that <code>patrollingLeft</code> variable.</p>
 <p>But this more or less works, so we keep going. A brainless bag of bones doesn&#x2019;t give yon Norse maiden too much of a challenge, so the next thing we add is a couple of enchanted statues. These will fire bolts of lightning at her every so often to keep her on her toes.</p>
 <p>Continuing our, "what&#x2019;s the simplest way to code this" style, we end up with:</p>
 <div class="codehilite"><pre><span class="c1">// Skeleton variables...</span>
@@ -175,7 +175,7 @@
 <h2><a href="#pattern" name="pattern">Pattern</a></h2>
 <p>The <strong>game world</strong> maintains a <strong>collection of objects</strong>. Each object implements an <strong>update method</strong> that simulates one frame of the object&#x2019;s behavior. Each frame, the game updates every object in the collection.</p>
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
-<p>If the Game Loop pattern is the best thing since sliced bread, then this pattern is its butter. A wide swath of games that have live entities that the player interacts with use this pattern in some form or other. If the game has space marines, dragons, martians, ghosts, or athletes, there&#x2019;s a good chance it uses this pattern.</p>
+<p>If the <a href="game-loop.html" class="pattern">Game Loop pattern</a> is the best thing since sliced bread, then this pattern is its butter. A wide swath of games featuring live entities that the player interacts with use this pattern in some form or other. If the game has space marines, dragons, martians, ghosts, or athletes, there&#x2019;s a good chance it uses this pattern.</p>
 <p>However, if the game is more abstract and the moving pieces are less like living actors and more like pieces on a chessboard, this pattern is often a poor fit. In a game like chess, you don&#x2019;t need to simulate all of the pieces concurrently, and you probably don&#x2019;t need to tell the <span name="pawn">pawns</span> to update themselves every frame.</p>
 <aside name="pawn">
 
@@ -206,7 +206,7 @@
 <p>When we changed this to a one-frame-at-a-time form, we had to create a <code>patrollingLeft</code> variable to track that. When we return out of the code, the execution position is lost so we need to explicitly store enough information to restore it on the next frame.</p>
 <p>The <a href="state.html" class="pattern">State pattern</a> can often help here. Part of the reason state machines are common in games is because (like their name implies) they store the kind of state that you need to pick up where you left off.</p>
 <h3><a href="#objects-all-simulate-each-frame-but-are-not-truly-concurrent" name="objects-all-simulate-each-frame-but-are-not-truly-concurrent">Objects all simulate each frame but are not truly concurrent</a></h3>
-<p>In this pattern, the game loops over a collection of objects and updates each one. Within an object&#x2019;s <code>update()</code> call, we can see the rest of the game world, including other objects that are being updated. This means that the <em>order</em> that the objects are updated is significant.</p>
+<p>In this pattern, the game loops over a collection of objects and updates each one. Inside the <code>update()</code> call, most objects are able to reach out and touch the rest of the game world, including other objects that are being updated. This means that the <em>order</em> that the objects are updated is significant.</p>
 <p>If A comes before B in the list of objects, then when A updates, it will see B&#x2019;s previous state. But when B updates, it will <span name="double-buffer">see</span> A&#x2019;s <em>new</em> state, since it&#x2019;s already updated this frame. Even though from the player&#x2019;s perspective everything is moving at the "same" time, the core of the game is still turn-based. It&#x2019;s just that a complete turn is only one frame long.</p>
 <aside name="double-buffer">
 
