--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -356,17 +356,16 @@ will default to a null provider.</p>
 <p>Turning off audio is handy during development. It frees up some memory
 and CPU cycles. More importantly, when you break into a debugger just
 as a loud sound starts playing, it saves you from having your eardrums
-shredded. There&#x2019;s nothing like twenty seconds of a scream sound effect
+shredded. There&#x2019;s nothing like twenty milliseconds of a scream sound effect
 looping at full volume to get your blood flowing in the morning.</p>
 </aside>
 
 <h3><a href="#logging-decorator" name="logging-decorator">Logging decorator</a></h3>
 <p>Now that our system is pretty robust, let&#x2019;s discuss another refinement
 this pattern lets us do: decorated services. I&#x2019;ll explain with an
-example:</p>
-<p>It&#x2019;s helpful during development to have the game log when certain
-events occur. If you&#x2019;re working on AI, it&#x2019;s very useful to know when
-an entity is changing AI states. If you&#x2019;re the sound programmer, you
+example.</p>
+<p>During development, a little logging when interesting events occur can help you figure out what&#x2019;s going on under the hood of your game engine. If you&#x2019;re working on AI, you&#x2019;d like to know when
+an entity changes AI states. If you&#x2019;re the sound programmer, you
 may want a record of every sound as it plays so you can check that
 they trigger in the right order.</p>
 <p>The typical solution is to just litter the code with calls to some
