--- a/html/index.html
+++ b/html/index.html
@@ -6,16 +6,14 @@
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="page">
 <div class="content">
-<h1>Game Programming Patterns</h1>
-
 <div class="in-progress">
   <span class="dismiss">&times;</span>
-  <p><strong>This book is a work in progress!</strong></p>
+  <h2>This book is a work in progress!</h2>
 
   <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
 
@@ -45,13 +43,14 @@
         <p>Thank you!</p>
       </td>
       <td width="50%">
-        <p class="signature">&mdash; Bob (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
+        <p class="signature">&mdash; Bob Nystrom (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
       </td>
     </tr>
   </table>
 </div>
+<h1>Game Programming Patterns</h1>
 
-<p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text (that I've written so far) is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
+<p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
 <p>To stay updated on the progress of the book, join <a href="http://eepurl.com/C0p89">the mailing list</a>. (Don't worry, it's very low traffic.) You can get in touch with me directly by emailing <tt>bob</tt> at this site. If you want to read more of my writing on other subjects, check out <a href="http://journal.stuffwithstuff.com/">my blog</a> or <a href="https://twitter.com/munificentbob">follow me on twitter</a>.</p>
 <h2>Chapters</h2>
 <ul>
